# trello2sp

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  trello_to_super_productivity.pyproj
src/: __init__.py  cli.py  main.py  migrator.py
tests/unit/: test_main.py
